--- a/plugin.xml
+++ b/plugin.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="../../../engine/Shopware/Components/Plugin/schema/plugin.xsd">
-    <label lang="de">ShyimBackendNotification</label>
-    <label lang="en">ShyimBackendNotification</label>
+    <label lang="de">FroshSimultaneousEditNotification</label>
+    <label lang="en">FroshSimultaneousEditNotification</label>
     <version>1.0.0</version>
-    <copyright>Shyim</copyright>
+    <copyright>Friends of Shopware</copyright>
     <license>MIT</license>
-    <link>https://github.com/shyim/ShyimBackendNotification</link>
-    <author>Shyim</author>
-    <compatibility minVersion="5.2.0"/>
+    <link>https://friendsofshopware.github.io/</link>
+    <author>Friends of Shopware</author>
+    <compatibility minVersion="5..0"/>
 </plugin>
